"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-05-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-21+:
	  simulator command interpreters can now accept "   #foo" comments.
	  Tested: test/prsim/command-08.prsimrc


2008-05-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-21:
	  Quick parser update to support prs literal parameter flavors.
	  1 test case added.  


2008-05-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-20:
	  Update error message on failed assignment at unroll-time.
	  New test case, others updated accordingly.  


2008-05-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-19:
	  Critical ICE-on-valid/reject-valid bug fix:
		failed range conversion in front-end, fixed.
		Test cases added: parser/array/065,066.  Gracias, Tadeo.


2008-05-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-18:
	  Minor error message update from parser on bad prs identifier.


2008-05-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-17:
	  Bug fix with always_random: wasn't taking effect before.
	  1 test case added.


2008-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-16:
	  No source revision, only scheme additions (scm/ChangeLog)
	  Many tests updated (more information) and added to test/chpsim.  


2008-04-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-15:
	  Minor grammar fix with CHP expressions.  Added to test suite.  
	  More chpsim-guile test cases for thesis stuff.  
		See also scm/ChangeLog for new scheme routines.  


2008-04-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-14:
	  No source revision, only scheme and scm updates (scm/ChangeLog).