@@ -1,5 +1,5 @@
 dnl "config/cxx_STL.m4"
-dnl	$Id: cxx_STL.m4,v 1.10 2008/03/17 23:02:01 fang Exp $
+dnl	$Id: cxx_STL.m4,v 1.11 2008/05/28 23:59:06 fang Exp $
 dnl Autoconf macros for detecting variations in C++ STL for any given compiler.
 dnl
 
@@ -254,6 +254,7 @@ dnl I bet you didn't know some of these locations were ever used!
 dnl However, you're not supposed to use anything older than gcc-3.3 anyways...
 dnl where is that damn hash_map?
 AC_CHECK_HEADERS([ext/hash_map hash_map alt/hash_map])
+AC_CHECK_HEADERS([ext/hashtable.h])
 dnl used mainly in "src/util/hash_specializations.h"
 AC_CHECK_HEADERS([ext/stl_hash_fun.h ext/hash_fun.h stl_hash_fun.h])
 AC_CHECK_HEADERS([ext/hash_set hash_set alt/hash_set])
